@@ -6,6 +6,36 @@
 <h2>Framework:</h2> 
 http://www.liberouter.mobi/
 
+<h2>Run the Server:</h2>
+<p>
+###Built from source:
+This project is a using the Sping.io Boot framework. It has an embedded Tomcat Server included. Built the project utilizing maven with:
+``` bash
+mvn clean package -Dmaven.test.skip=true
+```
+And you will find your a runnable jar file under: ./target/
+with the name: scampiREST-1.0-SNAPSHOT.jar
+
+###Run it with: 
+``` bash
+sudo -u www-data java -Xms56m -Xmx128m -XX:PermSize=56m -XX:MaxPermSize=128m -jar ./scampiREST-1.0-SNAPSHOT.jar
+``` 
+www-data is a user. It is the same as the nginx user. You should not run the server as root!
+
+###Folders:
+The server is creating two folders und /var/tmp and should have write permission there. 
+* /var/tmp/nginxFiles
+* /var/tmp/scampiRest
+
+The logging is used to be under: 
+* /var/tmp/scampiRest
+For security reasons you might want to change the file spring.log which will be created only to write enabled with chmod 222 ./spring.log
+</p>
+
+##Additional components requried:
+* Nginx
+* Mongodb
+* Scampi
 
 <h2>Design Diagrams:</h2>
 
@@ -17,7 +47,6 @@ https://creately.com/diagram/ihn6w04q/HC4OKwFY3QlDbjs2l2NNiN8k9iU%3D
 
 <h3>Request new Service from Scampi:</h3>
 https://creately.com/diagram/ihm7ybd31/quPHInTgBHPyNNbzjHlpRcWDtAw%3D
-
 
 
 <h2>Curl Commands to test and interact with the API:</h2>
